{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 886,
  "lineage": "f652e32e-4aa7-1c49-9872-98cfa2c62182",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00819cf4723bc4a97",
            "arn": "arn:aws:ec2:us-east-1:700409981052:elastic-ip/eipalloc-00819cf4723bc4a97",
            "association_id": "eipassoc-0e0eb65b646ef1e51",
            "domain": "vpc",
            "id": "eipalloc-00819cf4723bc4a97",
            "instance": "i-081a8e650c499bce5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-033b636376019c764",
            "private_dns": "ip-10-0-0-29.ec2.internal",
            "private_ip": "10.0.0.29",
            "public_dns": "ec2-50-19-13-221.compute-1.amazonaws.com",
            "public_ip": "50.19.13.221",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.gitlab_server",
            "aws_key_pair.labuser",
            "aws_security_group.gitlab_server_security",
            "aws_subnet.clcom-subnet",
            "aws_vpc.clcom-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitlab_runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1f44f890950b53c",
            "arn": "arn:aws:ec2:us-east-1:700409981052:instance/i-0b0005ab0bfa4295d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0005ab0bfa4295d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-labuser-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c7f1e1fe76ff1e66",
            "private_dns": "ip-10-0-0-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.30",
            "public_ip": "54.224.75.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c601242e90c4bb87",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02648f22ff8e45cd7",
            "tags": {
              "Name": "gitlab-runner"
            },
            "tags_all": {
              "Name": "gitlab-runner"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0876bcc2857bc6558"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.labuser",
            "aws_security_group.gitlab_runner_security",
            "aws_subnet.clcom-subnet",
            "aws_vpc.clcom-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitlab_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1f44f890950b53c",
            "arn": "arn:aws:ec2:us-east-1:700409981052:instance/i-081a8e650c499bce5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081a8e650c499bce5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ssh-labuser-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-033b636376019c764",
            "private_dns": "ip-10-0-0-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.29",
            "public_ip": "52.202.254.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ba46984df81e34d",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02648f22ff8e45cd7",
            "tags": {
              "Name": "gitlab-server"
            },
            "tags_all": {
              "Name": "gitlab-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb945315e2ba8d61"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.labuser",
            "aws_security_group.gitlab_server_security",
            "aws_subnet.clcom-subnet",
            "aws_vpc.clcom-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ldap_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1f44f890950b53c",
            "arn": "arn:aws:ec2:us-east-1:700409981052:instance/i-018e9752207028a53",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018e9752207028a53",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-labuser-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3e026e816e9c733",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "public_ip": "3.81.80.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0817247ec616e5ffe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02648f22ff8e45cd7",
            "tags": {
              "Name": "ldap-server"
            },
            "tags_all": {
              "Name": "ldap-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06795088e4ebf24ac"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.labuser",
            "aws_security_group.ldap_server_security",
            "aws_subnet.clcom-subnet",
            "aws_vpc.clcom-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "primary_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1f44f890950b53c",
            "arn": "arn:aws:ec2:us-east-1:700409981052:instance/i-094ff931038f51471",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094ff931038f51471",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-labuser-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-046e69e637ec34add",
            "private_dns": "ip-10-0-0-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.254",
            "public_ip": "54.81.218.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b6b0ebd823b130b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02648f22ff8e45cd7",
            "tags": {
              "Name": "primary-dns"
            },
            "tags_all": {
              "Name": "primary-dns"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081db5f0328fbd48a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.labuser",
            "aws_security_group.primary_dns_security",
            "aws_subnet.clcom-subnet",
            "aws_vpc.clcom-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "secondary_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1f44f890950b53c",
            "arn": "arn:aws:ec2:us-east-1:700409981052:instance/i-0181d5576fa7fe391",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0181d5576fa7fe391",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-labuser-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f7f8a1c40bc3ae6",
            "private_dns": "ip-10-0-0-253.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.253",
            "public_ip": "13.217.58.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05af24156496ce7a2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02648f22ff8e45cd7",
            "tags": {
              "Name": "secondary-dns"
            },
            "tags_all": {
              "Name": "secondary-dns"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb5ee45ea3f411a0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.labuser",
            "aws_security_group.secondary_dns_security",
            "aws_subnet.clcom-subnet",
            "aws_vpc.clcom-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "clcom-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:internet-gateway/igw-0ddeae27b81b3e1af",
            "id": "igw-0ddeae27b81b3e1af",
            "owner_id": "700409981052",
            "vpc_id": "vpc-07843f60ae4e85909"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "clcom-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:route-table/rtb-0f468d4a7a8d8e232",
            "id": "rtb-0f468d4a7a8d8e232",
            "owner_id": "700409981052",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ddeae27b81b3e1af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "clcom-route"
            },
            "tags_all": {
              "Name": "clcom-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-07843f60ae4e85909"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.clcom-igw",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0464509d17ac94afe",
            "route_table_id": "rtb-0f468d4a7a8d8e232",
            "subnet_id": "subnet-02648f22ff8e45cd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.clcom-igw",
            "aws_route_table.clcom-route",
            "aws_subnet.clcom-subnet",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitlab_runner_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group/sg-0876bcc2857bc6558",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0876bcc2857bc6558",
            "ingress": [],
            "name": "gitlab-runner-security",
            "name_prefix": "",
            "owner_id": "700409981052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gitlab-runner-security"
            },
            "tags_all": {
              "Name": "gitlab-runner-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-07843f60ae4e85909"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitlab_server_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group/sg-0fb945315e2ba8d61",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fb945315e2ba8d61",
            "ingress": [],
            "name": "gitlab_server_security",
            "name_prefix": "",
            "owner_id": "700409981052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gitlab_server_security"
            },
            "tags_all": {
              "Name": "gitlab_server_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-07843f60ae4e85909"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ldap_server_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group/sg-06795088e4ebf24ac",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06795088e4ebf24ac",
            "ingress": [],
            "name": "ldap-server-security",
            "name_prefix": "",
            "owner_id": "700409981052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ldap-server-security"
            },
            "tags_all": {
              "Name": "ldap-server-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-07843f60ae4e85909"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary_dns_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group/sg-081db5f0328fbd48a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-081db5f0328fbd48a",
            "ingress": [],
            "name": "primary-dns-security",
            "name_prefix": "",
            "owner_id": "700409981052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "primary-dns-security"
            },
            "tags_all": {
              "Name": "primary-dns-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-07843f60ae4e85909"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secondary_dns_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group/sg-0bb5ee45ea3f411a0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bb5ee45ea3f411a0",
            "ingress": [],
            "name": "secondary-dns-security",
            "name_prefix": "",
            "owner_id": "700409981052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secondary-dns-security"
            },
            "tags_all": {
              "Name": "secondary-dns-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-07843f60ae4e85909"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clcom-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:subnet/subnet-02648f22ff8e45cd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02648f22ff8e45cd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700409981052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clcom-subnet"
            },
            "tags_all": {
              "Name": "clcom-subnet"
            },
            "vpc_id": "vpc-07843f60ae4e85909"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "clcom-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:vpc/vpc-07843f60ae4e85909",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-04e11a1608ea9f433",
            "default_route_table_id": "rtb-0cc2d1c633c17f264",
            "default_security_group_id": "sg-0e483c50a4ef97b74",
            "dhcp_options_id": "dopt-0834a236762207434",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07843f60ae4e85909",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc2d1c633c17f264",
            "owner_id": "700409981052",
            "tags": {
              "Name": "clcom-vpc"
            },
            "tags_all": {
              "Name": "clcom-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ldap_allow_dns_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-037c0d65bd1695a27",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-037c0d65bd1695a27",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06795088e4ebf24ac",
            "security_group_rule_id": "sgr-037c0d65bd1695a27",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ldap_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ldap_allow_dns_tls_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-05dd3084ede5ed173",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 853,
            "id": "sgr-05dd3084ede5ed173",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06795088e4ebf24ac",
            "security_group_rule_id": "sgr-05dd3084ede5ed173",
            "tags": null,
            "tags_all": {},
            "to_port": 853
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ldap_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ldap_allow_dns_udp_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-05174b32752a78961",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-05174b32752a78961",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06795088e4ebf24ac",
            "security_group_rule_id": "sgr-05174b32752a78961",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ldap_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ldap_allow_http_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-032888f7147195bb2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-032888f7147195bb2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06795088e4ebf24ac",
            "security_group_rule_id": "sgr-032888f7147195bb2",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ldap_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ldap_allow_https_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0f1bca5e956b4f646",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0f1bca5e956b4f646",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06795088e4ebf24ac",
            "security_group_rule_id": "sgr-0f1bca5e956b4f646",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ldap_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ldap_allow_ldap_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0e6592c50017d1935",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 389,
            "id": "sgr-0e6592c50017d1935",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06795088e4ebf24ac",
            "security_group_rule_id": "sgr-0e6592c50017d1935",
            "tags": null,
            "tags_all": {},
            "to_port": 389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ldap_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ldap_allow_ldap_tls_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-07dc230ae28ba29ee",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 636,
            "id": "sgr-07dc230ae28ba29ee",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06795088e4ebf24ac",
            "security_group_rule_id": "sgr-07dc230ae28ba29ee",
            "tags": null,
            "tags_all": {},
            "to_port": 636
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ldap_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ldap_allow_ssh_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-02ccae6c39bfffe2c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02ccae6c39bfffe2c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06795088e4ebf24ac",
            "security_group_rule_id": "sgr-02ccae6c39bfffe2c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ldap_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "pdns_allow_dns_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0635f316b53f96fac",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-0635f316b53f96fac",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-081db5f0328fbd48a",
            "security_group_rule_id": "sgr-0635f316b53f96fac",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "pdns_allow_dns_tls_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0607356220c5f0124",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 853,
            "id": "sgr-0607356220c5f0124",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-081db5f0328fbd48a",
            "security_group_rule_id": "sgr-0607356220c5f0124",
            "tags": null,
            "tags_all": {},
            "to_port": 853
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "pdns_allow_dns_udp_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-032b56741bccd4516",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-032b56741bccd4516",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-081db5f0328fbd48a",
            "security_group_rule_id": "sgr-032b56741bccd4516",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "pdns_allow_http_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-04299da9b6dc38222",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04299da9b6dc38222",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-081db5f0328fbd48a",
            "security_group_rule_id": "sgr-04299da9b6dc38222",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "pdns_allow_https_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-066005537db0630ca",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-066005537db0630ca",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-081db5f0328fbd48a",
            "security_group_rule_id": "sgr-066005537db0630ca",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "pdns_allow_ssh_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0723e2e7ebc9d91ad",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0723e2e7ebc9d91ad",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-081db5f0328fbd48a",
            "security_group_rule_id": "sgr-0723e2e7ebc9d91ad",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "runner_allow_dns_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-01dea693ae18a9442",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-01dea693ae18a9442",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0876bcc2857bc6558",
            "security_group_rule_id": "sgr-01dea693ae18a9442",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_runner_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "runner_allow_dns_tls_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0afda0edf0582420e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 853,
            "id": "sgr-0afda0edf0582420e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0876bcc2857bc6558",
            "security_group_rule_id": "sgr-0afda0edf0582420e",
            "tags": null,
            "tags_all": {},
            "to_port": 853
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_runner_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "runner_allow_dns_udp_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-04356f7982491bc83",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-04356f7982491bc83",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0876bcc2857bc6558",
            "security_group_rule_id": "sgr-04356f7982491bc83",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_runner_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "runner_allow_http_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-002f8622e81cb1883",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-002f8622e81cb1883",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0876bcc2857bc6558",
            "security_group_rule_id": "sgr-002f8622e81cb1883",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_runner_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "runner_allow_https_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-08d1091eaa0637359",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-08d1091eaa0637359",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0876bcc2857bc6558",
            "security_group_rule_id": "sgr-08d1091eaa0637359",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_runner_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "runner_allow_ssh_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0b405565b0854e605",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b405565b0854e605",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0876bcc2857bc6558",
            "security_group_rule_id": "sgr-0b405565b0854e605",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_runner_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sdns_allow_dns_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0bdbe99bc906a737b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-0bdbe99bc906a737b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-0bdbe99bc906a737b",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sdns_allow_dns_tls_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-09c30ccfdc93eff29",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 853,
            "id": "sgr-09c30ccfdc93eff29",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-09c30ccfdc93eff29",
            "tags": null,
            "tags_all": {},
            "to_port": 853
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sdns_allow_dns_udp_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0c31f25e331934759",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-0c31f25e331934759",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-0c31f25e331934759",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sdns_allow_http_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0a7460c67196a0d3c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a7460c67196a0d3c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-0a7460c67196a0d3c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sdns_allow_https_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-00f4af61bba9d5aea",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-00f4af61bba9d5aea",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-00f4af61bba9d5aea",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sdns_allow_ssh_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0e294764ac4331654",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0e294764ac4331654",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-0e294764ac4331654",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "server_allow_dns_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-00e671d0069d5aa1e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-00e671d0069d5aa1e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-00e671d0069d5aa1e",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "server_allow_dns_tls_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-09eb8b1f51270f5fc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 853,
            "id": "sgr-09eb8b1f51270f5fc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-09eb8b1f51270f5fc",
            "tags": null,
            "tags_all": {},
            "to_port": 853
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "server_allow_dns_udp_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0bbef6d5769a1b4e8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-0bbef6d5769a1b4e8",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-0bbef6d5769a1b4e8",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "server_allow_git_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0feb4b4cd7bdab050",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9418,
            "id": "sgr-0feb4b4cd7bdab050",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-0feb4b4cd7bdab050",
            "tags": null,
            "tags_all": {},
            "to_port": 9418
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "server_allow_http_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-03b4b87cbb70c60ad",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03b4b87cbb70c60ad",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-03b4b87cbb70c60ad",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "server_allow_https_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-029c94a9d2551db7e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-029c94a9d2551db7e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-029c94a9d2551db7e",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "server_allow_ldap_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-036cbbcee1cddfae7",
            "cidr_ipv4": "10.0.0.10/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 389,
            "id": "sgr-036cbbcee1cddfae7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-036cbbcee1cddfae7",
            "tags": null,
            "tags_all": {},
            "to_port": 389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "server_allow_ldap_tls_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-08b239670d58a0207",
            "cidr_ipv4": "10.0.0.10/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 636,
            "id": "sgr-08b239670d58a0207",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-08b239670d58a0207",
            "tags": null,
            "tags_all": {},
            "to_port": 636
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "server_allow_ssh_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0ff3bc64abe7d9cce",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ff3bc64abe7d9cce",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-0ff3bc64abe7d9cce",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ldap_allow_ldap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-049e78566aee9ea0e",
            "cidr_ipv4": "10.0.0.29/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 389,
            "id": "sgr-049e78566aee9ea0e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06795088e4ebf24ac",
            "security_group_rule_id": "sgr-049e78566aee9ea0e",
            "tags": null,
            "tags_all": {},
            "to_port": 389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ldap_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ldap_allow_ldap_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0e4c70960f2596222",
            "cidr_ipv4": "10.0.0.29/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 636,
            "id": "sgr-0e4c70960f2596222",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06795088e4ebf24ac",
            "security_group_rule_id": "sgr-0e4c70960f2596222",
            "tags": null,
            "tags_all": {},
            "to_port": 636
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ldap_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ldap_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0f00d1b5be91b4cb0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f00d1b5be91b4cb0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06795088e4ebf24ac",
            "security_group_rule_id": "sgr-0f00d1b5be91b4cb0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ldap_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "pdns_allow_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-00f84f58bedb21643",
            "cidr_ipv4": "10.0.0.28/30",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-00f84f58bedb21643",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-081db5f0328fbd48a",
            "security_group_rule_id": "sgr-00f84f58bedb21643",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "pdns_allow_dns_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-00fda14ccf3bf3758",
            "cidr_ipv4": "10.0.0.28/30",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 853,
            "id": "sgr-00fda14ccf3bf3758",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-081db5f0328fbd48a",
            "security_group_rule_id": "sgr-00fda14ccf3bf3758",
            "tags": null,
            "tags_all": {},
            "to_port": 853
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "pdns_allow_dns_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0659b6c1a56c98917",
            "cidr_ipv4": "10.0.0.28/30",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-0659b6c1a56c98917",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-081db5f0328fbd48a",
            "security_group_rule_id": "sgr-0659b6c1a56c98917",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "pdns_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0c5df0a455c9183e8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c5df0a455c9183e8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-081db5f0328fbd48a",
            "security_group_rule_id": "sgr-0c5df0a455c9183e8",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "runner_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0796b85b84ea2cd77",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0796b85b84ea2cd77",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0876bcc2857bc6558",
            "security_group_rule_id": "sgr-0796b85b84ea2cd77",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_runner_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sdns_allow_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0983be21ad273139c",
            "cidr_ipv4": "10.0.0.28/30",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-0983be21ad273139c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-0983be21ad273139c",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sdns_allow_dns_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0f74a1609a254979e",
            "cidr_ipv4": "10.0.0.28/30",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 853,
            "id": "sgr-0f74a1609a254979e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-0f74a1609a254979e",
            "tags": null,
            "tags_all": {},
            "to_port": 853
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sdns_allow_dns_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-010ffae90ee71b3c4",
            "cidr_ipv4": "10.0.0.28/30",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-010ffae90ee71b3c4",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-010ffae90ee71b3c4",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sdns_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0e50ce4814152424e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e50ce4814152424e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-0e50ce4814152424e",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sdns_allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0f1133ab82c609faa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0f1133ab82c609faa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-0f1133ab82c609faa",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sdns_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-07d650a01a748833d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07d650a01a748833d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb5ee45ea3f411a0",
            "security_group_rule_id": "sgr-07d650a01a748833d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_dns_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "server_allow_git",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-02e84dbdb5bd1191e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9418,
            "id": "sgr-02e84dbdb5bd1191e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-02e84dbdb5bd1191e",
            "tags": null,
            "tags_all": {},
            "to_port": 9418
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "server_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-03f71ccb233ec4f29",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03f71ccb233ec4f29",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-03f71ccb233ec4f29",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "server_allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-0e177401e5a6fc34b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0e177401e5a6fc34b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-0e177401e5a6fc34b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "server_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700409981052:security-group-rule/sgr-08ebd65469b79a210",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-08ebd65469b79a210",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fb945315e2ba8d61",
            "security_group_rule_id": "sgr-08ebd65469b79a210",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_server_security",
            "aws_vpc.clcom-vpc"
          ]
        }
      ]
    }
  ]
}